css/style.css
/* ... */
@media screen and (max-width: 767px) {
    .container {
        max-width: calc(100% - 30px);
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .container {
        max-width: 700px;
    }
}

@media screen and (max-width: 991px) {
    .logo-link .logo {
        max-height: 100px;
    }
     
    .table-column-placeholder {
        display: none;
    }
    .table-column-data {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
        margin-bottom: 40px;
    }
    .table-column-data .items {
        position: relative;
        order: 1;
        margin-top: 40px;
    }
    .table-column-data .items::before {
        position: absolute;
        right: 0;
        bottom: 100%;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        width: calc(50% - 1px);
        height: 40px;
        margin-left: auto;
        background-color: #b99476;
        border-left: 1px solid #d5af90;
    }
    .table-column-data .items::after {
        content: "ITEMS";
        position: absolute;
        left: 0;
        bottom: 100%;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        width: 50%;
        height: 40px;
        background-color: #b99476;
    }
    .table-column-data .quantity {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        order: 2;
        height: 40px;
    }
    .table-column-data .quantity > label {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        width: 50%;
    }
    .table-column-data .quantity > input {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        margin-left: auto;
        margin-right: auto;
        width: 100%;
        max-width: 60px;
        height: 25px;
        padding: 0 10px;
    }

    .table-column-data .summary {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        order: 3;
    }
    .table-column-data .summary > * {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
        width: 50%;
        height: 40px;
    }
    .table-column-data .summary > *:nth-child(1), .table-column-data .summary > *:nth-child(2) {
        background-color: #b99476;
    }


    .table-info .table-column .item::before {
        content: "";
        position: absolute;
        top: 0;
        right: 0;
        left: 0;
        width: 1px;
        height: 100%;
        margin: auto;
        background-color: #d5af90;
    }
    .table-info .table-column .item > span,
    .table-info .table-column .item > .item-checkbox {
        width: 50%;
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
    }
    .table-info .table-column-data .check-box {
        left: 50%;
    }

    .totals {
        padding-top: 0;
        margin-bottom: 15px;
    }
    .totals .wrapper {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
    }
    .totals .wrapper-left, .totals .wrapper-right {
        width: 100%;
    }
    .totals .display-group .text, .totals .display-group .autocompute {
        width: 50%;
        text-align: center;
    }
    .totals .wrapper-right {
        margin-top: 40px;
    }
}

@media (min-width: 992px) and (max-width: 1199px) {
    .container {
        max-width: 900px;
    }
}
/* ... */

